--- a/.github/workflows/hashnode.yaml
+++ b/.github/workflows/hashnode.yaml
@@ -1,22 +1,24 @@
-name: "📚 Blog Updater"
+name: "📚 latest Blog"
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # Runs Every Day
+    - cron: "0 0 * * *" # Runs Every 24 Hours
 
 jobs:
   update_blogs:
-    name: "Update Blogs"
+    name: "Update With Latest Blogs"
     runs-on: ubuntu-latest
     steps:
       - name: "📥  Fetching Repository Contents"
         uses: actions/checkout@main
 
       - name: "📚  Hashnode Updater"
-        uses: "varunsridharan/action-hashnode-blog@main"
+        uses: "varunsridharan/action-hashnode-blog@1.1.1"
         with:
-          USERNAME: "HasnainMakada" # Hashnode Username
-          BLOG_URL: "https://hasnainm.hashnode.dev/" # Blog URL
-          COUNT: 10 # MAX Visisble
+          USERNAME: "Vasanti" # Hashnode Username
+          COUNT: 4 # MAX Visisble
+          STYLE: "blog-left"
+          BLOG_URL: "https://vasantisuthar.hashnode.dev/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
