--- a/.github/workflows/hashnode.yaml
+++ b/.github/workflows/hashnode.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           USERNAME: "HasnainMakada" # Hashnode Username
           COUNT: 4 # MAX Visisble
-          STYLE: "blog-left"
+          STYLE: "blog-grid"
           BLOG_URL: "https://hasnainm.hashnode.dev/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
