--- a/.github/workflows/hashnode.yaml
+++ b/.github/workflows/hashnode.yaml
@@ -2,7 +2,7 @@ name: "📚 latest Blog"
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs Every 24 Hours
+    - cron: "*/5 * * * *"
 
 jobs:
   update_blogs:
