--- a/.github/workflows/github-metrics.yaml
+++ b/.github/workflows/github-metrics.yaml
@@ -12,27 +12,33 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-
+          
           # Options
           user: hasnainmakada-99
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity, repositories
           config_timezone: Asia/Kolkata
-
-          # Advancement plugin
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-
-          # Additional plugins
+          
+          # Languages plugin
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
           plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
+          plugin_languages_colors: github
           plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
+          plugin_languages_threshold: 2%
+          
+          # Activity plugin
+          plugin_activity: yes
+          plugin_activity_limit: 5
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          
+          # Notable contributions
+          plugin_notable: yes
+          plugin_notable_repositories: yes
+          
+          # Lines of code
+          plugin_lines: yes
+          plugin_lines_sections: repositories, history
+          
+          # Disable achievements to save space
+          plugin_achievements: no
