--- a/.github/workflows/github-metrics.yaml
+++ b/.github/workflows/github-metrics.yaml
@@ -36,9 +36,8 @@ jobs:
           plugin_notable: yes
           plugin_notable_repositories: yes
           
-          # Lines of code
+          # Lines of code changed
           plugin_lines: yes
-          plugin_lines_sections: repositories, history
-          
-          # Disable achievements to save space
-          plugin_achievements: no
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
